--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 # Ignorar todos los archivos de ejemplos y soluciones para no modificarlos
 /soluciones-ejercicios
 /ejemplos
+/ejemplos/1_introduccion
