--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 # Ignorar todos los archivos de ejemplos y soluciones para no modificarlos
-/soluciones-ejercicios
-/ejemplos
+/soluciones-ejercicios/**
+/ejemplos/**
