--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-# Ignorar todos los archivos de ejemplos y soluciones para no modificarlos
-/soluciones-ejercicios/**
-/ejemplos/**
+# Ignorar todos los archivos y subcarpetas en la carpeta soluciones-ejercicios
+soluciones-ejercicios/**
+
+# Ignorar todos los archivos y subcarpetas en la carpeta ejemplos
+ejemplos/**
